# pypopsift

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example.py  pyproject.toml  setup.py
.github/workflows/: wheels.yml
docker/: Dockerfile
src/: main.cpp  popsift.cpp  popsift.h
tests/: test.py
