[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "pypopsift"
authors = [
    {name = "Piero Toffanin", email = "pt@uav4geo.com"},
]
description = "Python module for CUDA accelerated GPU SIFT"
readme = "README.md"
requires-python = ">=3.10, <3.11"
license = {file = "LICENSE"}
version = "1.0.2+brain1"
dependencies = [
    "numpy",
]

[tool.cibuildwheel]
test-command = "python /project/tests/test.py"
manylinux-x86_64-image = "sameli/manylinux2014_x86_64_cuda_12.2"

[tool.cibuildwheel.linux]
# todo: build for mac, other pythons, and ARM
build = ["cp310-manylinux_x86_64"]
skip = ["pp*"]  # don't build for pypy
